examples/test/testpolicy5320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5320
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key17: value18
      key13: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value23
          key38: value17
      podSelector:
        matchLabels:
          key22: value37
